@@ -1,3 +1,10 @@
+ 2003-09-26 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skstream.h: Add accessors for address size members.
+    - ping/ping.cpp: Clean up use of libc and system calls.
+    - skstream/skstream.cpp: Clean up handling socket address sizes
+      when setting socket by descriptor in the buffer objects.
+      Add code that handles converting address to presentation format
+      in a protocol independant way.
  2003-09-25 Al Riddoch <alriddoch@zepler.org>
     - skstream/skpoll.cpp, skstream/skserver.cpp, skstream/skstream.cpp:
       Finish off fully qualifying all libc and system calls as being
